--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (1.2.34) unstable; urgency=low
+
+  * dh_clean: added -d flag (also --dirs-only) that will make it clean only
+    tmp dirs. (closes: #30807)
+  * dh_installdocs: to support packages that need multiple doc-base files,
+    will now look for debian/<package>.doc-base.<doc-id>.
+  * dh_compress: removed warning message (harmless).
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat,  6 Feb 1999 17:48:33 -0800
+
 debhelper (1.2.33) unstable; urgency=low
 
   * dh_compress: verbose_print() cd's.
