--- a/doc/README
+++ b/doc/README
@@ -12,7 +12,7 @@ Starting a new package:
 ----------------------
 
 You can just use the example rules files and do the rest of the new package
-set up by hand, or you could try the new dh-make package, which contains a
+set up by hand, or you could try the dh-make package, which contains a
 "dh_make" command that is similar to debmake, and tries to automate the
 process.
 
