--- a/doc/TODO
+++ b/doc/TODO
@@ -1,12 +1,6 @@
 This is the TODO for debhelper. As more and more people use debhelper, this
 list grows - I welcome patches to fix items on it!
 
-Bugs:
-
-* all commands should print a warning message if non-cumulative parameters
-  are given more than once (ie, two -u's to dh_gencontrol). (#22588)
-  (Bug currently under dispute, I think this is bogus).
-
 Wishlist items:
 
 * Make dh_* "use strict".
@@ -54,8 +48,8 @@ Wishlist items:
 
 Deprecated:
 
-* remove dh_installdebfiles, dh_du.
-	- need to wait a reasonable length of time. I'm currently planning
-	  on doing this after slink is released or one year after they were
-	  deprecated, whichever comes first. Be sure to grep whole debian
-	  archive for all of them before removing them, though!
+* remove dh_installdebfiles, dh_du. 
+  - need to wait a reasonable length of
+    time. I'm currently planning on doing this after slink is released or
+    one year after they were deprecated, whichever comes first. Be sure to
+    grep whole debian archive for all of them before removing them, though!
