--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.35) unstable; urgency=low
+
+  * Dh_Lib.pm filearray(): Deal with multiple spaces and spaces at the 
+    beginning of lines in files. (closes: #33161)
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue,  9 Feb 1999 21:01:07 -0800
+
 debhelper (1.2.34) unstable; urgency=low
 
   * dh_clean: added -d flag (also --dirs-only) that will make it clean only
