--- a/dh_compress.1
+++ b/dh_compress.1
@@ -38,7 +38,7 @@ for a list of options common to all debhelper commands.
 .TP
 .B \-Xitem, \--exclude=item
 Exclude files that contain "item" anywhere in their filename from being
-compressed. For example, -X=.jpeg will exclude jpeg's from compression.
+compressed. For example, -X.jpeg will exclude jpeg's from compression.
 You may use this option multiple times to build up a list of things to
 exclude. You can accomplish the same thing by using a debian/compress file,
 but this is easier.
