--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (1.2.37) unstable; urgency=low
+
+  * dh_installdocs: Patch from Jim Pick <jim@jimpick.com>, fixes regexp error (Closes: #33431).
+  * dh_installxaw: new program by Daniel Martin 
+    <Daniel.Martin@jhu.edu>, handles xaw-wrappers integration.
+  * dh_installxaw.1: wrote man page.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 18 Feb 1999 17:32:53 -0800
+
 debhelper (1.2.36) unstable; urgency=low
 
   * dh_compress.1: Fixed typo in man page. (Closes: #33364)
