--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.36) unstable; urgency=low
+
+  * dh_compress.1: Fixed typo in man page. (Closes: #33364)
+  * autoscripts/postinst-menu-method: fixed typo. (Closes: #33376)
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun, 14 Feb 1999 13:45:18 -0800
+
 debhelper (1.2.35) unstable; urgency=low
 
   * Dh_Lib.pm filearray(): Deal with multiple spaces and spaces at the 
