--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.38) unstable; urgency=low
+
+  * dh_clean: don't try to delete directories named "core".
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat, 20 Feb 1999 19:13:40 -0800
+
 debhelper (1.2.37) unstable; urgency=low
 
   * dh_installdocs: Patch from Jim Pick <jim@jimpick.com>, fixes regexp error (Closes: #33431).
