--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.39) unstable; urgency=low
+
+  * dh_installcron: install files in cron.d with correct perms.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat, 20 Feb 1999 22:28:38 -0800
+
 debhelper (1.2.38) unstable; urgency=low
 
   * dh_clean: don't try to delete directories named "core".
