--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.40) unstable; urgency=low
+
+  * Let's just say 1.2.39 is not a good version of debhelper to use and
+    leave it at that. :-)
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat, 20 Feb 1999 22:55:27 -0800
+
 debhelper (1.2.39) unstable; urgency=low
 
   * dh_installcron: install files in cron.d with correct perms.
