--- a/doc/README
+++ b/doc/README
@@ -38,7 +38,7 @@ script. If you would like to embed it into a perl script, here is one way to
 do that (note the tricky use of backquotes) (also note that I made sure that
 $1, $2, etc are set with the set command):
 
-print << `EOF`
+print << `EOF`;
 set -- @ARGV
 #DEBHELPER#
 EOF
