--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.41) unstable; urgency=low
+
+  * README: minor typo fix.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat, 20 Feb 1999 23:30:00 -0800
+
 debhelper (1.2.40) unstable; urgency=low
 
   * Let's just say 1.2.39 is not a good version of debhelper to use and
