--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.42) unstable; urgency=low
+
+  * dh_m5sums: don't generate bogus md5sums file if the package contains no
+    files. Yes, someone found a legitimate reason to do that.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 25 Feb 1999 00:03:47 -0800
+
 debhelper (1.2.41) unstable; urgency=low
 
   * README: minor typo fix.
