--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (1.2.43) unstable; urgency=low
+
+  * dh_compress.1: man page fixes (Closes: #33858).
+  * dh_compress: now it can handle compressing arbitrary numbers of files,
+    spawning gzip multiple times like xargs does, if necessary.
+    (Closes: #33860)
+  * Dh_Lib.pm: added xargs() command.
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue,  9 Mar 1999 14:57:09 -0800
+
 debhelper (1.2.42) unstable; urgency=low
 
   * dh_m5sums: don't generate bogus md5sums file if the package contains no
