--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.44) unstable; urgency=medium
+
+  * dh_fixperms: has been mostly broken when used with -X, corrected this.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat, 13 Mar 1999 17:25:59 -0800
+
 debhelper (1.2.43) unstable; urgency=low
 
   * dh_compress.1: man page fixes (Closes: #33858).
