--- a/dh_du.1
+++ b/dh_du.1
@@ -1,6 +1,6 @@
 .TH DH_DU 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
-dh_du \- generate DEBIAN/du file
+dh_du \- generate DEBIAN/du file (deprecated)
 .SH SYNOPSIS
 .B dh_du
 .SH "DESCRIPTION"
