--- a/dh_installdebfiles.1
+++ b/dh_installdebfiles.1
@@ -1,6 +1,6 @@
 .TH DH_INSTALLDEBFILES 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
-dh_installdebfiles \- install files into the DEBIAN directory
+dh_installdebfiles \- install files into the DEBIAN directory (deprecated)
 .SH SYNOPSIS
 .B dh_installdebfiles
 .SH "DESCRIPTION"
