--- a/dh_installwm.1
+++ b/dh_installwm.1
@@ -2,13 +2,13 @@
 .SH NAME
 dh_installwm \- register a window manager
 .SH SYNOPSIS
-.B dh_installmenu
+.B dh_installwm
 .I "[debhelper options] [-n] wmfilename"
 .SH "DESCRIPTION"
 dh_installwm is a debhelper program that is responsible for
 generating the postinst and postrm commands needed to
 interface with the the
-.BR register-window-manager (1)
+.BR register-window-manager (8)
 command. This results in a window manager being registered when it is
 installed.
 .SH OPTIONS
@@ -37,6 +37,6 @@ for a list of environment variables that affect all debhelper commands.
 .TP
 .BR debhelper (1)
 .TP
-.BR register-window-manager (1)
+.BR register-window-manager (8)
 .SH AUTHOR
 Joey Hess <joeyh@master.debian.org>
