--- a/dh_movefiles.1
+++ b/dh_movefiles.1
@@ -1,6 +1,6 @@
 .TH DH_MOVEFILES 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
-dh_movefiles \- moves files out of debian/tmp into subpackages
+dh_movefiles \- move files out of debian/tmp into subpackages
 .SH SYNOPSIS
 .B dh_movefiles
 .I "[debhelper options] [--sourcedir=dir] [file ..]"
