--- a/debhelper.1
+++ b/debhelper.1
@@ -97,6 +97,9 @@ debian/, it will create it. I haven't bothered to document this in all the
 man pages, but for example, dh_installdeb knows to make debian/tmp/DEBIAN/
 before trying to put files there, dh_installmenu knows you need a
 debian/tmp/usr/lib/menu/ before installing the menu files, etc.
+.SH "DEBHELPER COMMANDS"
+Here is the complete list of available debhelper commands.
+#LIST#
 .SH ENVIRONMENT
 .TP
 .I DH_VERBOSE
