--- a/doc/README
+++ b/doc/README
@@ -9,6 +9,10 @@ that use debhelper commands extensively. See /usr/doc/debhelper/examples/ .
 These files are also useful as they give one good order you can run the 
 various debhelper scripts in (though other variations are possible).
 
+For a more gentle introduction, the maint-guid debian package contains a
+tutorial about making your first package using Debhelper.
+
+
 Starting a new package:
 ----------------------
 
