--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.46) unstable; urgency=low
+
+  * doc/README: pointer to maint-guide.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 18 Mar 1999 21:04:57 -0800
+
 debhelper (1.2.45) unstable; urgency=low
 
   * dh_installwm.1: fixed two errors (#34534, #34535)
