--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (1.2.47) unstable; urgency=low
+
+  * doc/README: updated the example of including debhelper shell script
+    fragments inside a perl program -- the old method didn't work with shell
+    variables properly (#34850).
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun, 21 Mar 1999 13:25:33 -0800
+
 debhelper (1.2.46) unstable; urgency=low
 
   * doc/README: pointer to maint-guide.
