--- a/dh_fixperms.1
+++ b/dh_fixperms.1
@@ -6,7 +6,8 @@ dh_fixperms \- fix permissions of files in package build directories
 .I "[debhelper options] [-Xitem]"
 .SH "DESCRIPTION"
 dh_fixperms is a debhelper program that is responsible for setting the
-permissions of files in package build directories to a sane state.
+permissions of files and directories in package build directories to a
+sane state -- a state that complies with Debian policy.
 .P
 dh_fixperms makes all files in usr/doc in the package build directory
 (excluding files in the examples/ directory) be mode 644. It also changes 
