--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.48) unstable; urgency=low
+
+  * dh_fixperms.1: improved documentation. (#34968)
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 23 Mar 1999 19:11:01 -0800
+
 debhelper (1.2.47) unstable; urgency=low
 
   * doc/README: updated the example of including debhelper shell script
