--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.50) unstable; urgency=low
+
+  * Very minor typo fix.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 26 Mar 1999 17:27:01 -0800
+
 debhelper (1.2.49) unstable; urgency=low
 
   * dh_fixperms: if called with -X, was attempting to change permissions of
