--- a/dh_movefiles.1
+++ b/dh_movefiles.1
@@ -18,7 +18,7 @@ move on the command line and this will apply to the first package
 dh_movefiles is told to act on.
 .P
 The files will be moved in a special order: first all normal files, then all
-symlinks. This is done becuase it tends to be a good thing to have symlinks
+symlinks. This is done because it tends to be a good thing to have symlinks
 last in debian packages, particularly in shared library packages.
 .SH OPTIONS
 .TP
