--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.52) unstable; urgency=low
+
+  * dh_installmodules: new program, closes #32546.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  1 Apr 1999 17:25:37 -0800
+
 debhelper (1.2.51) unstable; urgency=low
 
   * Another very minor typo fix.
