--- a/dh_installinit.1
+++ b/dh_installinit.1
@@ -13,7 +13,7 @@ needed to set up the symlinks in /etc/rc*.d/ and to start and stop the init
 scripts.
 .P
 If a file named debian/package.init (or debian/package.init.d for backwards
-compatability with debstd) exists, then it is installed into
+compatibility with debstd) exists, then it is installed into
 etc/init.d/package in the package build directory, with "package" replaced
 by the packagename. (You may use debian/init for the first binary package
 listed in the control file.)
@@ -33,7 +33,7 @@ Do not restart daemon on upgrade.
 .B \-d, \--remove-d
 Remove trailing "d" from the name of the package, and use the result for the
 filename the init script is installed as in etc/init.d/ . This may be useful
-for daemons with names ending in "d". (Note: this takes precidence over
+for daemons with names ending in "d". (Note: this takes precedence over
 the --init-script parameter described below.)
 .TP
 .B \-uparams, \--update-rcd-params=params
@@ -51,6 +51,7 @@ See
 .BR debhelper (1)
 for a list of environment variables that affect all debhelper commands.
 .SH "SEE ALSO"
-.BR debhelper (1)
+.BR debhelper (1),
+.BR update_rc.d (8)
 .SH AUTHOR
 Joey Hess <joeyh@master.debian.org>
