--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (1.2.54) unstable; urgency=low
+
+  * dh_installinit.1: man page fixups (#34160).
+  * *.1: the date of each man page is now automatically updated when 
+    debhelper is built to be the last modification time of the man page.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  8 Apr 1999 20:28:00 -0700
+
 debhelper (1.2.53) unstable; urgency=low
 
   * dh_compress: leave .taz and .tgz files alone. Previously trying to
