--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (1.2.55) unstable; urgency=low
+
+  * Various man page enhancements.
+  * dh_md5sums: supports -X to make it skip including files in the
+    md5sums (#35819).
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri,  9 Apr 1999 18:21:58 -0700
+
 debhelper (1.2.54) unstable; urgency=low
 
   * dh_installinit.1: man page fixups (#34160).
