--- a/dh_installdocs.1
+++ b/dh_installdocs.1
@@ -56,7 +56,7 @@ Install all files specified by command line parameters in ALL packages
 acted on.
 .TP
 .B \-n, \--noscripts
-DO not modify postinst/prerm scripts.
+Do not modify postinst/prerm scripts.
 .TP
 .B file ...
 Install these files as documentation into the first package acted on. (Or in
