--- a/dh_md5sums.1
+++ b/dh_md5sums.1
@@ -3,7 +3,7 @@
 dh_md5sums \- generate DEBIAN/md5sums file (deprecated)
 .SH SYNOPSIS
 .B dh_md5sums
-.I "[debhelper options] [-x]"
+.I "[debhelper options] [-x] [-Xitem]"
 .SH "DESCRIPTION"
 dh_md5sums is a debhelper program that is responsible for generating
 a DEBIAN/md5sums file, which lists the md5sums of each file in the package.
@@ -20,8 +20,12 @@ See
 for a list of options common to all debhelper commands.
 .TP
 .B \-x, \--include-conffiles
-Include conffiles in the md5sums list. Note that this is redundant, and
-included elsewhere in debian packages.
+Include conffiles in the md5sums list. Note that this information is
+redundant since it is included elsewhere in debian packages.
+.TP
+.B \-Xitem, --exclude=item
+Exclude files that contain "item" anywhere in their filename from
+being listed in the md5sums file.
 .SH ENVIRONMENT
 See
 .BR debhelper (1)
