--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (1.2.56) unstable; urgency=low
+
+  * dh_suidregister: make the chown/chmod only happen if the file actually
+    exists. This is useful if you have conffiles that have permissions and
+    may be deleted. (#35845)
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat, 10 Apr 1999 13:35:23 -0700
+
 debhelper (1.2.55) unstable; urgency=low
 
   * Various man page enhancements.
