--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.57) unstable; urgency=low
+
+  * examples/*: killed trailing spaces after diff: target
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 12 Apr 1999 22:02:32 -0700
+
 debhelper (1.2.56) unstable; urgency=low
 
   * dh_suidregister: make the chown/chmod only happen if the file actually
