--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.58) unstable; urgency=low
+
+  * autoscripts/postinst-suid: use /#FILE# in elif test (#36297).
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun, 18 Apr 1999 22:33:52 -0700
+
 debhelper (1.2.57) unstable; urgency=low
 
   * examples/*: killed trailing spaces after diff: target
