--- a/dh_installexamples.1
+++ b/dh_installexamples.1
@@ -9,7 +9,7 @@ dh_installexamples is a debhelper program that is responsible for installing
 examples into usr/doc/package/examples in package build directories.
 .P
 Any file names specified as parameters will be installed into the first 
-package dh_installdirs is told to act on. By default, this is the first 
+package dh_installexamples is told to act on. By default, this is the first 
 binary package in debian/control, but if you use -p, -i, or -a flags, it
 will be the first package specified by those flags.
 .P
