--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.59) unstable; urgency=low
+
+  * dh_builddeb: added --destdir option, which lets you tell it where
+    to put the generated .deb's. Default is .. of course.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 22 Apr 1999 22:02:01 -0700
+
 debhelper (1.2.58) unstable; urgency=low
 
   * autoscripts/postinst-suid: use /#FILE# in elif test (#36297).
