--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.60) unstable; urgency=low
+
+  * dh_installexamples.1: recycled docs fix.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 26 Apr 1999 17:19:07 -0700
+
 debhelper (1.2.59) unstable; urgency=low
 
   * dh_builddeb: added --destdir option, which lets you tell it where
