--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.61) unstable; urgency=low
+
+  * dh_md5sums.1: dh_md5sums is not deprecated, AFAIK, but the manpage has
+    somehow been modified to say it was at version 1.2.45.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 26 Apr 1999 19:54:04 -0700
+
 debhelper (1.2.60) unstable; urgency=low
 
   * dh_installexamples.1: recycled docs fix.
