--- a/dh_md5sums.1
+++ b/dh_md5sums.1
@@ -1,6 +1,6 @@
 .TH DH_MD5SUMS 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
-dh_md5sums \- generate DEBIAN/md5sums file (deprecated)
+dh_md5sums \- generate DEBIAN/md5sums file
 .SH SYNOPSIS
 .B dh_md5sums
 .I "[debhelper options] [-x] [-Xitem]"
