--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.62) unstable; urgency=low
+
+  * dh_installemacsen: added support for site-start files. Added --flavor
+    and --number to control details of installation. (#36832)
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun,  2 May 1999 15:31:58 -0700
+
 debhelper (1.2.61) unstable; urgency=low
 
   * dh_md5sums.1: dh_md5sums is not deprecated, AFAIK, but the manpage has
