--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.63) unstable; urgency=low
+
+  * dh_installxaw: updated to work with xaw-wrappers 0.90 and above. It
+    actually has to partially parse the xaw-wrappers config files now. 
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun,  2 May 1999 19:13:34 -0700
+
 debhelper (1.2.62) unstable; urgency=low
 
   * dh_installemacsen: added support for site-start files. Added --flavor
