--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.65) unstable; urgency=low
+
+  * Added to docs.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  6 May 1999 21:46:03 -0700
+
 debhelper (1.2.64) unstable; urgency=low
 
   * dh_installmime: new command (#37093, #32684).
