--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.64) unstable; urgency=low
+
+  * dh_installmime: new command (#37093, #32684).
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon,  3 May 1999 13:37:34 -0700
+
 debhelper (1.2.63) unstable; urgency=low
 
   * dh_installxaw: updated to work with xaw-wrappers 0.90 and above. It
