--- a/dh_installxaw.1
+++ b/dh_installxaw.1
@@ -8,7 +8,7 @@ dh_installxaw \- install xaw wrappers config files into package build directorie
 dh_installxaw is a debhelper program that is responsible for installing
 xaw wrappers config files into package build directories. 
 .P
-It also automatically generates the postinst and postrm commands needed to 
+It also automatically generates the postinst, prerm, and postrm commands needed to 
 interface with the debian xaw-wrappers package. See 
 .BR dh_installdeb (1)
 for an explanation of how this works.
@@ -26,7 +26,7 @@ See
 for a list of options common to all debhelper commands.
 .TP
 .B \-n, \--noscripts
-Do not modify postinst/postrm scripts.
+Do not modify postinst/prerm/postrm scripts.
 .SH ENVIRONMENT
 See
 .BR debhelper (1)
