--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.66) unstable; urgency=low
+
+  * examples/rules.multi: dh_shlibdeps must be run before dh_gencontrol
+    (#37346)
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun,  9 May 1999 14:03:05 -0700
+
 debhelper (1.2.65) unstable; urgency=low
 
   * Added to docs.
