--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.67) unstable; urgency=low
+
+  * dh_installmodules: fixed type that made the program not work.
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed, 12 May 1999 00:25:05 -0700
+
 debhelper (1.2.66) unstable; urgency=low
 
   * examples/rules.multi: dh_shlibdeps must be run before dh_gencontrol
