--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.69) unstable; urgency=low
+
+  * Don't include Test.pm in the binary package.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun, 23 May 1999 19:29:27 -0700
+
 debhelper (1.2.68) unstable; urgency=low
 
   * doc/README: updated example of using #DEBHELPER# in a perl script, with
