--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.71) unstable; urgency=low
+
+  * Fixed a typo (closes: #38881)
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  3 Jun 1999 13:23:23 -0700
+
 debhelper (1.2.70) unstable; urgency=low
 
   * dh_installmanpages: Properly quoted metacharacters in $dir in regexp.
