--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.70) unstable; urgency=low
+
+  * dh_installmanpages: Properly quoted metacharacters in $dir in regexp.
+    (#38263).
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 25 May 1999 14:12:30 -0700
+
 debhelper (1.2.69) unstable; urgency=low
 
   * Don't include Test.pm in the binary package.
