--- a/doc/README
+++ b/doc/README
@@ -1,7 +1,7 @@
 Debhelper is a collection of programs that can be used in debian/rules files
 to automate common tasks related to building debian binary packages. For 
 further documentation, see the man pages for dh_* commands. For an overview 
-of debhelper, inclusing a list of all the available commands, see the
+of debhelper, including a list of all the available commands, see the
 debhelper(1) man page.
 
 To help you get started, I've included examples of debian/rules files
