--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (1.2.72) unstable; urgency=low
+
+  * dh_installemacsen: use debian/package.emacsen-startup, not
+    debian/package.emacsen-init. The former has always been documented to
+    work on the man page (closes: #38898).
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  3 Jun 1999 14:16:57 -0700
+
 debhelper (1.2.71) unstable; urgency=low
 
   * Fixed a typo (closes: #38881)
