--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (1.2.73) unstable; urgency=low
+
+  * dh_installemacsen: make sure files are installed mode 0644. Not strictly
+    necessary since dh_fixperms fixes them if you have a wacky umask, but oh
+    well. (Closes: 38900)
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  3 Jun 1999 14:50:42 -0700
+
 debhelper (1.2.72) unstable; urgency=low
 
   * dh_installemacsen: use debian/package.emacsen-startup, not
