--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.75) unstable; urgency=low
+
+  * dh_installemacsen: fixed perms of install, remove scripts.
+    (closes: #39082)
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon,  7 Jun 1999 14:42:12 -0700
+
 debhelper (1.2.74) unstable; urgency=low
 
   * dh_installmanpages: recognizes gzipped man pages and installs them.
