--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.77) unstable; urgency=low
+
+  * dh_installpam: new program by Sean <shaleh@foo.livenet.net>
+  * Wrote man page for same.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 11 Jun 1999 13:08:04 -0700
+
 debhelper (1.2.76) unstable; urgency=low
 
   * dh_fixperms: Do not use chmod/chown -R at all anymore, instead it uses
