--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (1.2.79) unstable; urgency=low
+
+  * Added dh_perl by Raphael Hertzog <rhertzog@hrnet.fr>. dh_perl handles
+    finding dependancies of perl scripts, plus deleting those annoying
+    .packlist files.
+  * I don't think dh_perl is going to be useful until the new version of
+    perl comes out.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 24 Jun 1999 14:47:55 -0700
+
 debhelper (1.2.78) unstable; urgency=low
 
   * Really include dh_installpam.
