--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.78) unstable; urgency=low
+
+  * Really include dh_installpam.
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 15 Jun 1999 09:00:36 -0700
+
 debhelper (1.2.77) unstable; urgency=low
 
   * dh_installpam: new program by Sean <shaleh@foo.livenet.net>
