--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.80) unstable; urgency=low
+
+  * Changed perl version detection.
+  * Changed call to find.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 24 Jun 1999 16:48:53 -0700
+
 debhelper (1.2.79) unstable; urgency=low
 
   * Added dh_perl by Raphael Hertzog <rhertzog@hrnet.fr>. dh_perl handles
