--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.81) unstable; urgency=low
+
+  * dh_link: fixed bug #40159 and added a regression test for it. It was
+    failing if it was given absolute filenames.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 25 Jun 1999 10:12:44 -0700
+
 debhelper (1.2.80) unstable; urgency=low
 
   * Changed perl version detection.
