--- a/dh_installinit.1
+++ b/dh_installinit.1
@@ -45,7 +45,12 @@ If not specified, "defaults" will be passed to
 .B \--init-script=scriptname
 Use "scriptname" as for the filename the init script is installed as in
 etc/init.d/ . This is useful if you need to have an init script with a name
-different from the package's name.
+different from the package's name. Note that if you use this parameter,
+dh_installinit will look to see if a file in the debian/ directory exists
+that looks like "scriptname" or "package.scriptname" and if so will install
+it as the inist script in preference to the files it normally installs. This
+feature is really only useful if you need a single package to install more
+than one init script.
 .SH ENVIRONMENT
 See
 .BR debhelper (1)
