--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (1.2.82) unstable; urgency=low
+
+  * dh_installinit: applied patch from Yann Dirson <ydirson@multimania.com>
+    to make it look for init.d scripts matching the --init-script parameter.
+    This is only useful if, like Yann, you have packages that need to install
+    more than 1 init script.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 25 Jun 1999 11:38:05 -0700
+
 debhelper (1.2.81) unstable; urgency=low
 
   * dh_link: fixed bug #40159 and added a regression test for it. It was
