--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.83) unstable; urgency=medium
+
+  * dh_perl: fixed substvars typo. Urgency medium since a lot of people will
+    be using this script RSN.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  1 Jul 1999 11:44:05 -0700
+
 debhelper (1.2.82) unstable; urgency=low
 
   * dh_installinit: applied patch from Yann Dirson <ydirson@multimania.com>
