--- a/debhelper.1
+++ b/debhelper.1
@@ -120,6 +120,14 @@ Here is the complete list of available debhelper commands.
 .I DH_VERBOSE
 Enables verbose mode.
 .TP
+.I DH_COMPAT
+Specifies what compatability level debhelper should run at. The default is 1,
+which makes debhelper behave in a manner compatable with the 1.x series of
+debhelper. If set to 2, debhelper's behavior will change to use the new
+features of the 2.x series. Use this with caution, as the 2.x series makes
+major changes that will break most packages. For documentation on these
+changes, read /usr/doc/debhelper/v2
+.TP
 .I DH_NO_ACT
 Enables no-act mode.
 .TP
