--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (1.9.00) unstable; urgency=low
+
+  * This is a release of debhelper in preparation for debhelper v2.
+  * doc/v2: added, documented status of v2 changes.
+  * README: mention doc/v2
+  * debhelper.1: docuimented DH_COMPAT
+  * examples/*: added DH_COMAPT=1 to top of rules files
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  1 Jul 1999 13:16:41 -0700
+
 debhelper (1.2.83) unstable; urgency=medium
 
   * dh_perl: fixed substvars typo. Urgency medium since a lot of people will
