--- a/doc/README
+++ b/doc/README
@@ -12,6 +12,13 @@ various debhelper scripts in (though other variations are possible).
 For a more gentle introduction, the maint-guide debian package contains a
 tutorial about making your first package using Debhelper.
 
+Debhelper v2:
+------------
+
+Debhelper v2 is a major new version of Debhelper, still under development.
+Debhelper will continue to work in v1 compatability mode for now, if you're
+interested in trying the new versiln, read the file named "v2".
+
 
 Starting a new package:
 ----------------------
