--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.01) unstable; urgency=low
+
+  * Actually include doc/v2 this time round.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  1 Jul 1999 14:01:55 -0700
+
 debhelper (2.0.00) unstable; urgency=low
 
   * Don't let the version number fool you. Debhelper v2 is here, but just
