--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (2.0.02) unstable; urgency=low
+
+  * If you're going to use v2, it's reccommended you call 
+    "dh_testversion 2". Added a note about that to doc/v2.
+  * Dh_Lib.pm compat: if a version that is greater than the highest
+    supported compatability level is specified, abort with an error. Perhaps
+    there will be a debhelper v3 some day...
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  1 Jul 1999 14:08:14 -0700
+
 debhelper (2.0.01) unstable; urgency=low
 
   * Actually include doc/v2 this time round.
