--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.03) unstable; urgency=low
+
+  * Depend on file >= 2.23-1, because dh_perl uses file -b, introduced at
+    that version. (Closes: #40589)
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  1 Jul 1999 14:41:12 -0700
+
 debhelper (2.0.02) unstable; urgency=low
 
   * If you're going to use v2, it's reccommended you call 
