--- a/dh_perl.1
+++ b/dh_perl.1
@@ -1,9 +1,9 @@
-.TH DH_PERLCHECK 1 "22 June 1999" "Debhelper Commands" "Debhelper Commands"
+.TH DH_PERL 1 "22 June 1999" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
 dh_perl \- calculates perl scripts & modules dependencies
 .SH SYNOPSIS
 .B dh_perl
-.I "[debhelper options] [-k]"
+.I "[debhelper options] [-k] [-d]"
 .SH "DESCRIPTION"
 dh_perl is a debhelper program that is responsible for generating
 the perl:Depends substitutions and adding them to substvars files. 
@@ -28,6 +28,14 @@ for a list of options common to all debhelper commands.
 .TP
 .B -k
 Keep .packlist files.
+.TP
+.B -d
+In some specific cases you may want to depend on a -base package
+(ie perl-5.00X-base or perl5-base). If so, you can pass
+the -d option to make
+.BR dh_perl 
+generate a dependency on the correct base package. This is only necessary
+for some modules that are included in the base system.
 .SH ENVIRONMENT
 See
 .BR debhelper (1)
