--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (2.0.04) unstable; urgency=low
+
+  * Patch from Raphael Hertzog <rhertzog@hrnet.fr> to make dh_perl support a
+    -d flag that makes it add a dependancy on the sppropriate perl-XXX-base
+    package. Few packages will really need this. (Closes: #40631)
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri,  2 Jul 1999 11:22:00 -0700
+
 debhelper (2.0.03) unstable; urgency=low
 
   * Depend on file >= 2.23-1, because dh_perl uses file -b, introduced at
