--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (2.0.05) unstable; urgency=low
+
+  * dh_clean: clean debian/tmp even if v2 is being used. If you're
+    using dh_movefiles, stuff may well be left in there, and it needs to be
+    cleaned up.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat,  3 Jul 1999 13:23:46 -0700
+
 debhelper (2.0.04) unstable; urgency=low
 
   * Patch from Raphael Hertzog <rhertzog@hrnet.fr> to make dh_perl support a
