--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.06) unstable; urgency=low
+
+  * Now depends on perl5 | perl, I'll kill the | perl bit later on, but it
+    seems to make sense for the transition.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun,  4 Jul 1999 10:56:03 -0700
+
 debhelper (2.0.05) unstable; urgency=low
 
   * dh_clean: clean debian/tmp even if v2 is being used. If you're
