--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.07) unstable; urgency=low
+
+  * Added dh_perl calls to example rules files.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun,  4 Jul 1999 15:57:51 -0700
+
 debhelper (2.0.06) unstable; urgency=low
 
   * Now depends on perl5 | perl, I'll kill the | perl bit later on, but it
