--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.08) unstable; urgency=low
+
+  * dh_*: redirect cd output to /den/null, because CD can actually output
+    things if CDPATH is set.
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue,  6 Jul 1999 10:14:00 -0700
+
 debhelper (2.0.07) unstable; urgency=low
 
   * Added dh_perl calls to example rules files.
